fixed header on mobile screens

--- a/style.css
+++ b/style.css
@@ -2676,7 +2676,7 @@ button.mfp-arrow {
 
 /* Text Slider */
 .text-slider  {
-	padding-top: 57px;
+	padding-top: 20%;
 	/*margin-bottom: 50px;*/
 }
 
